// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for autoRepair 1`] = `
{
  "buttons": 38,
  "inputs": 0,
  "lengthBucket": 119,
  "sha": "a9cba48e7f1b7d5e",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for behaviorLab 1`] = `
{
  "buttons": 24,
  "inputs": 4,
  "lengthBucket": 53,
  "sha": "c060a5d21069fbe2",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for bikeLab 1`] = `
{
  "buttons": 11,
  "inputs": 0,
  "lengthBucket": 71,
  "sha": "d2cec5f6a9d8d8a5",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for codingPlayground 1`] = `
{
  "buttons": 57,
  "inputs": 0,
  "lengthBucket": 126,
  "sha": "e4f80e5f967a8e0e",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for companionPlanting 1`] = `
{
  "buttons": 20,
  "inputs": 0,
  "lengthBucket": 89,
  "sha": "fd50a86a89624c58",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for decomposer 1`] = `
{
  "buttons": 30,
  "inputs": 0,
  "lengthBucket": 88,
  "sha": "7cb2d620dd649c87",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for economicsLab 1`] = `
{
  "buttons": 24,
  "inputs": 5,
  "lengthBucket": 56,
  "sha": "aaaddc0b1028bbcb",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for evoLab 1`] = `
{
  "buttons": 20,
  "inputs": 0,
  "lengthBucket": 130,
  "sha": "c7b633c76f3a91e0",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for firstResponse 1`] = `
{
  "buttons": 1,
  "inputs": 0,
  "lengthBucket": 9,
  "sha": "c70c3ea456f9b826",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for lifeSkills 1`] = `
{
  "buttons": 16,
  "inputs": 2,
  "lengthBucket": 73,
  "sha": "3d2e03fce97ac0a4",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for llmLiteracy 1`] = `
{
  "buttons": 13,
  "inputs": 0,
  "lengthBucket": 144,
  "sha": "007165c395cb1416",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for migration 1`] = `
{
  "buttons": 16,
  "inputs": 6,
  "lengthBucket": 77,
  "sha": "15055b288c72ba12",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for oratory 1`] = `
{
  "buttons": 16,
  "inputs": 0,
  "lengthBucket": 56,
  "sha": "d7c5e6260d72d3eb",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for petsLab 1`] = `
{
  "buttons": 35,
  "inputs": 6,
  "lengthBucket": 146,
  "sha": "5fc21bdcdea54306",
  "svgs": 1,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for playlab 1`] = `
{
  "buttons": 31,
  "inputs": 4,
  "lengthBucket": 86,
  "sha": "b59903166944e7ab",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for renewablesLab 1`] = `
{
  "buttons": 12,
  "inputs": 0,
  "lengthBucket": 63,
  "sha": "00f32172a6300a62",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for singing 1`] = `
{
  "buttons": 29,
  "inputs": 0,
  "lengthBucket": 60,
  "sha": "617fdeed2c4eaf6c",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for stewardshipHub 1`] = `
{
  "buttons": 2,
  "inputs": 0,
  "lengthBucket": 17,
  "sha": "702076f8956b43f0",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for typingPractice 1`] = `
{
  "buttons": 36,
  "inputs": 0,
  "lengthBucket": 151,
  "sha": "d34371edf4daaa5b",
  "svgs": 0,
}
`;

exports[`career/nature long-tail render goldens (default state) > renders + pins a digest for worldBuilder 1`] = `
{
  "buttons": 15,
  "inputs": 7,
  "lengthBucket": 62,
  "sha": "be17112a5e48ede3",
  "svgs": 1,
}
`;
